--- a/proyecto.ipynb
+++ b/proyecto.ipynb
@@ -2989,7 +2989,9 @@
    "id": "24e7dfe3",
    "metadata": {},
    "source": [
-    "Primero se intentó con Harvesine, pero es inexacto\n",
+    "### Obtención de la matriz de distancias\n",
+    "\n",
+    "Primero se intentó con Harvesine, pero es inexacto. Es de tener en cuenta que podría aproximarse a una distancia euclidiana, pero no se hizo dado que se contaba con la ubicación de las estaciones en términos de latitud y longitud. \n",
     "\n",
     "![image.png](attachment:image.png)"
    ]
@@ -3108,6 +3110,24 @@
     "distance_df = pd.DataFrame(distance_matrix, columns=df['NOMBRE ESTACION'], index=df['NOMBRE ESTACION'])\n",
     "\n",
     "print(distance_df.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c84ecd4",
+   "metadata": {},
+   "source": [
+    "### Nota\n",
+    "Se hace la suposición de que esta realmente funcionará como una matriz de distancias, a pesar de que la naturaleza de los viajes hace que pueda ser que se recomiende una ruta de ida y una distinta de regreso, por lo que no sería simétrica la matriz. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21410d09",
+   "metadata": {},
+   "source": [
+    "### Problema\n",
+    "De acá vemos que esta aproximación no fue correcta dado que las distancias recorridas no son lineales, sino que son como una distancia Manhattan, donde se debe respetar las calles y carreras. Por lo tanto, se intenta con otros métodos. "
    ]
   },
   {
@@ -3920,7 +3940,7 @@
    "id": "2a98c2f0",
    "metadata": {},
    "source": [
-    "## Modelo de optimización lineal para la distribución de bicicletas en Encicla (con reutilización)\n",
+    "## Modelo de optimización lineal para la distribución de bicicletas en Encicla (sin reutilización)\n",
     "\n",
     "Se considera un sistema de bicicletas compartidas con **1.800 bicicletas totales** disponibles. Cada estación $i$ tiene una capacidad máxima de anclajes $C_i$ (obtenidos del catálogo oficial de estaciones). Además, a partir de los datos de viajes (`trips_mock.csv`) se computó la demanda promedio de viajes origen-destino en horas pico de la mañana y la tarde.\n",
     "\n",
@@ -3928,9 +3948,9 @@
     "- **Cuántas bicicletas asignar inicialmente a cada estación ($B_i$)**  \n",
     "- **Cuántos viajes atender entre cada par de estaciones ($x_{ij}$)**  \n",
     "\n",
-    "De forma que se **maximice la cobertura de la demanda total de viajes** en cada franja horaria, considerando ahora que las bicicletas se pueden **reutilizar dentro de la franja horaria** (es decir, cuando una bici llega a una estación, queda disponible para otro viaje dentro de ese mismo periodo).\n",
+    "De forma que se **maximice la cobertura de la demanda total de viajes** en cada franja horaria, considerando ahora que las bicicletas **no** se pueden **reutilizar dentro de la franja horaria** (es decir, cuando una bici llega a una estación, **no** queda disponible para otro viaje dentro de ese mismo periodo).\n",
     "\n",
-    "Este planteamiento es consistente con estudios previos de optimización de inventarios dinámicos en sistemas de bicicletas compartidas.\n",
+    "Este planteamiento como se verá a continuación presenta problemas.\n",
     "\n",
     "---\n",
     "\n",
